--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <div class="todo-app">
-        <h2>TO-DO List <img src="/images/icon.png" alt="#" srcset=""></h2>  
+        <h2>TO-DO List <img src="https://github.com/tarun-s-77/TO-DO/blob/main/images/icon.png" alt="#" srcset=""></h2>  
         <div class="row">
         <input type="text" id="input-box" placeholder="add an event..">
         <button onclick="addevent()">Add</button>
